[gd_scene load_steps=2 format=3 uid="uid://game_ui_template"]

[ext_resource type="Script" path="res://scenes/game_ui.gd" id="1_ui"]

[node name="GameUI" type="CanvasLayer"]
layer = 10
script = ExtResource("1_ui")

[node name="ScoreContainer" type="Control" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 120.0
grow_horizontal = 2

[node name="ScoreLabel" type="Label" parent="ScoreContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -40.0
offset_right = 100.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 40)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ComboLabel" type="Label" parent="ScoreContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 20)
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_font_sizes/font_size = 32
text = "5x COMBO!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseButton" type="Button" parent="ScoreContainer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0
grow_horizontal = 0
text = "II"

[node name="PausePanel" type="Panel" parent="."]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PausedLabel" type="Label" parent="PausePanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeBtn" type="Button" parent="PausePanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "RESUME"

[node name="RestartBtn" type="Button" parent="PausePanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "RESTART"

[node name="MenuBtn" type="Button" parent="PausePanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "MAIN MENU"

[node name="GameOverPanel" type="Panel" parent="."]
process_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -180.0
offset_right = 150.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="GameOverLabel" type="Label" parent="GameOverPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "GAME OVER"
horizontal_alignment = 1

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Score: 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="GameOverPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Best: 0"
horizontal_alignment = 1

[node name="NewHighLabel" type="Label" parent="GameOverPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
theme_override_font_sizes/font_size = 28
text = "NEW HIGH SCORE!"
horizontal_alignment = 1

[node name="RestartBtn" type="Button" parent="GameOverPanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "PLAY AGAIN"

[node name="MenuBtn" type="Button" parent="GameOverPanel/VBox"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "MAIN MENU"

[connection signal="pressed" from="ScoreContainer/PauseButton" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="PausePanel/VBox/ResumeBtn" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PausePanel/VBox/RestartBtn" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PausePanel/VBox/MenuBtn" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="GameOverPanel/VBox/RestartBtn" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOverPanel/VBox/MenuBtn" to="." method="_on_menu_pressed"]
